<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MarketRatio" >

    <TextView
        android:id="@+id/txtbasic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/mar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/skyblue"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center" >

            <Button
                android:id="@+id/btndividendC"
                style="@style/btnStyleShakespeare"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/dividendC"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btndividendY"
                style="@style/btnStyleShakespeare"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/dividendY"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btndividendS"
                style="@style/btnStyleShakespeare"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/dividendS"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btneps"
                style="@style/btnStyleShakespeare"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/eps"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnpayoutratio"
                style="@style/btnStyleShakespeare"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/payoutratio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnpeg"
                style="@style/btnStyleShakespeare"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/peg"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnprice"
                style="@style/btnStyleShakespeare"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/price"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>