<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BasicEquation" >

    <TextView
        android:id="@+id/txtbasic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/basic"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/skyblue"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnasset"
                style="@style/btnStyleShakespeare"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="45dip"
                android:gravity="left"
                android:paddingLeft="100dp"
                android:text="@string/ass"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnebit"
                style="@style/btnStyleShakespeare"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dip"
                android:gravity="left"
                android:paddingLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/ebit"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btneq"
                style="@style/btnStyleShakespeare"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dip"
                android:gravity="left"
                android:paddingLeft="100dp"
                android:text="@string/equ"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btngp"
                style="@style/btnStyleShakespeare"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dip"
                android:gravity="left"
                android:paddingLeft="100dp"
                android:text="@string/gross"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnlia"
                style="@style/btnStyleShakespeare"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dip"
                android:gravity="left"
                android:paddingLeft="100dp"
                android:text="@string/lia"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnnet"
                style="@style/btnStyleShakespeare"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dip"
                android:gravity="left"
                android:paddingLeft="100dp"
                android:text="@string/net"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnop"
                style="@style/btnStyleShakespeare"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dip"
                android:gravity="left"
                android:paddingLeft="100dp"
                android:text="@string/op"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnsr"
                style="@style/btnStyleShakespeare"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dip"
                android:gravity="left"
                android:paddingLeft="100dp"
                android:text="@string/sr"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>