<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Depreciation" >
    
    <TextView
        android:id="@+id/txtbasic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_depreciation"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/skyblue"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnbook"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtbasic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/acid"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btndec"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnbook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/cash"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnstraight"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btndec"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/work"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnpro"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnstraight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/operation"
        android:textSize="18sp" />

</RelativeLayout>
