<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DebtRatio" >

    <TextView
        android:id="@+id/txtbasic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/debt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/skyblue"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnder"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtbasic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/der"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btndebtratio"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/debt"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btndscr"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btndebtratio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dscr"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnlder"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btndscr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/lder"
        android:textSize="18sp" />

</RelativeLayout>